上线第一版，还待测试^_^-->yqy

--- a/hHYuanLing/src/main/res/values-zh/strings.xml
+++ b/hHYuanLing/src/main/res/values-zh/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">园林企业平台</string>
+    <string name="app_name">园林诚信平台</string>
     <!-- 共有的 -->
     <string name="back">返回</string>
     <string name="home_exit">再按一次退出^_^</string>
